修改一些参数

--- a/tools/execute_sql.yaml
+++ b/tools/execute_sql.yaml
@@ -1,6 +1,6 @@
 identity:
   name: execute_sql
-  author: BarrelStopHere
+  author: ykr
   label:
     en_US: execute_sql
     zh_Hans: execute_sql
@@ -35,7 +35,7 @@ parameters:
   - name: host
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Database ip/host
       zh_Hans: 数据库IP/域名
@@ -48,7 +48,7 @@ parameters:
   - name: port
     type: number
     required: true
-    form: form
+    form: llm
     min: 1
     max: 65535
     label:
@@ -63,7 +63,7 @@ parameters:
   - name: db_name
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Database name
       zh_Hans: 数据库名称
@@ -76,7 +76,7 @@ parameters:
   - name: username
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Username
       zh_Hans: 用户名
@@ -89,7 +89,7 @@ parameters:
   - name: password
     type: secret-input
     required: true
-    form: form
+    form: llm
     label:
       en_US: Password
       zh_Hans: 密码
