--- a/tools/txt2sql.yaml
+++ b/tools/txt2sql.yaml
@@ -1,6 +1,6 @@
 identity:
   name: txt2sql
-  author: BarrelStopHere
+  author: ykr
   label:
     en_US: txt2sql
     zh_Hans: txt2sql
@@ -73,7 +73,7 @@ parameters:
   - name: host
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Database ip/host
       zh_Hans: 数据库IP/域名
@@ -101,7 +101,7 @@ parameters:
   - name: db_name
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Database name
       zh_Hans: 数据库名称
@@ -127,7 +127,7 @@ parameters:
   - name: username
     type: string
     required: true
-    form: form
+    form: llm
     label:
       en_US: Username
       zh_Hans: 用户名
@@ -140,7 +140,7 @@ parameters:
   - name: password
     type: secret-input
     required: true
-    form: form
+    form: llm
     label:
       en_US: Password
       zh_Hans: 密码
